// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar> renders 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "backgroundColor": "#F5F5F6",
        "justifyContent": "center",
      },
      Array [
        Object {
          "borderRadius": 20,
          "height": 40,
          "width": 40,
        },
        false,
        false,
        undefined,
      ],
    ]
  }
>
  <Image
    onLoad={[Function]}
    resizeMode="cover"
    source={
      Object {
        "uri": "https://api.adorable.io/avatars/128/8",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 20,
          "height": 40,
          "width": 40,
        },
        false,
        false,
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
        Object {
          "position": "absolute",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
  </View>
</View>
`;

exports[`<Avatar> when {large} 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "backgroundColor": "#F5F5F6",
        "justifyContent": "center",
      },
      Array [
        Object {
          "borderRadius": 20,
          "height": 40,
          "width": 40,
        },
        Object {
          "borderRadius": 30,
          "height": 60,
          "width": 60,
        },
        false,
        undefined,
      ],
    ]
  }
>
  <Image
    onLoad={[Function]}
    resizeMode="cover"
    source={
      Object {
        "uri": "https://api.adorable.io/avatars/128/8",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 20,
          "height": 40,
          "width": 40,
        },
        Object {
          "borderRadius": 30,
          "height": 60,
          "width": 60,
        },
        false,
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
        Object {
          "position": "absolute",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
  </View>
</View>
`;

exports[`<Avatar> when {small} 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "backgroundColor": "#F5F5F6",
        "justifyContent": "center",
      },
      Array [
        Object {
          "borderRadius": 20,
          "height": 40,
          "width": 40,
        },
        false,
        Object {
          "borderRadius": 10,
          "height": 20,
          "width": 20,
        },
        undefined,
      ],
    ]
  }
>
  <Image
    onLoad={[Function]}
    resizeMode="cover"
    source={
      Object {
        "uri": "https://api.adorable.io/avatars/128/8",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 20,
          "height": 40,
          "width": 40,
        },
        false,
        Object {
          "borderRadius": 10,
          "height": 20,
          "width": 20,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
        Object {
          "position": "absolute",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
  </View>
</View>
`;

exports[`<Avatar> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "backgroundColor": "#F5F5F6",
        "justifyContent": "center",
      },
      Array [
        Object {
          "borderRadius": 20,
          "height": 40,
          "width": 40,
        },
        false,
        false,
        Object {
          "borderRadius": 5,
          "height": 128,
          "width": 128,
        },
      ],
    ]
  }
>
  <Image
    onLoad={[Function]}
    resizeMode="cover"
    source={
      Object {
        "uri": "https://api.adorable.io/avatars/128/8",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 20,
          "height": 40,
          "width": 40,
        },
        false,
        false,
        Object {
          "borderRadius": 5,
          "height": 128,
          "width": 128,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
        Object {
          "position": "absolute",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
  </View>
</View>
`;
